--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "Weather-App",
-    "slug": "Weather-App",
+    "name": "Sky-Timer",
+    "slug": "Sky-Timer",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "Weather-App",
+    "scheme": "Sky-Timer",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -28,7 +28,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/icon1.png",
+          "image": "./assets/images/icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
